<resources>
    <!--    Application Name-->
    <string name="app_name">Chat</string>

    <!--    hints and errors-->
    <string name="not_implemented">This feature is coming soon in ${app_name}</string>

    <!--    dimensions-->

    <!--    common-->
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="notes">Notes</string>

    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="add_new_person">Add new person</string>

    <string name="profile">Profile</string>
    <string name="profile_pic">Profile pic</string>
    <string name="save">Save</string>

    <!--    main activity-->
    <string name="search">Search</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="notification_profile">Notification profile</string>

    <!--    log in page -->
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="enter_received_otp">Enter received otp</string>
    <string name="get_otp">Get OTP</string>

    <!--    add Profile details-->
    <string name="name">Name</string>
    <string name="update">Update</string>

    <string name="sample_text">Sample text</string>

    <!--    message page -->
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="disappear_messages">Disappear messages</string>
    <string name="all_media">All media</string>
    <string name="conversation_setting">Conversation setting</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="mute_notification">Mute notification</string>

    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy to clipboard</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="aduio">audio</string>
    <string name="contact">Contact</string>
    <string name="documents">Documents</string>

    <string name="image_sent">Image sent</string>
    <string name="send_message">Send message</string>
    <string name="verify">verify</string>

    <string name="sender_name">Sender Name</string>
    <string name="timeStamp">Time Stamp</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <string name="update_profile">Update Profile</string>

    <!--    bottom sheet-->
    <string name="edit">Edit</string>

    <!--    notes-->
    <string name="create_note">Create Note</string>
    <string name="create_todos">Create To-Dos</string>

    <string name="edit_list_name">Edit List Name</string>
    <string name="delete_list">Delete List</string>


    <string name="content">Content</string>
    <string name="last_updated">Last updated</string>
    <string name="add">Add</string>
    <string name="title">Title</string>


    <string name="username">username</string>
    <string name="description">Description</string>

    <string name="call_action">call action</string>
    <string name="call_type">call type</string>
    <string name="text">Text</string>
    <string name="add_task">Add task</string>
    <string name="delete_task">Delete task</string>
    <string name="todos">To Dos</string>
    <string name="list_title">List title</string>
    <string name="list_name">List name</string>
    <string name="app_icon">App icon</string>

    <!--    settings-->
    <string name="account">Account</string>
    <string name="linked_devices">Linked devices</string>
    <string name="donate_to_app_name">Donate to ${app_name}</string>
    <string name="apperareance">Apperareance</string>
    <string name="stories">Stories</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="data_and_storage">Data and storage</string>
    <string name="help">Help</string>
    <string name="logout">logout</string>

    <string name="userneme_hint">This could be your first name or nickname.\nIt\'s how you appear on ${app_name}.</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="audio">Audio</string>
    <string name="disappearing_messages">Disappearing messages</string>
    <string name="sound_notification"><![CDATA[Sound & notification]]></string>
    <string name="contact_details">Contact details</string>
    <string name="view_safety_number">View safety number</string>
    <string name="shared_media">Shared media</string>
    <string name="view_all">View all</string>
    <string name="block">Block</string>

    <!--    Account Settings-->
    <string name="app_pin">${app_name} pin</string>
    <string name="change_your_pin">Change your PIN</string>
    <string name="pin_reminders">PIN reminders</string>
    <string name="pin_reminders_hint">You\'ll be asked less frequently over time</string>
    <string name="registration_lock">Registration Lock</string>
    <string name="disable_pin_hint">If you disable the PIN, you will lose all data when you re-register ${app_name} unless you manually back up and restore. You can not turn on Registration Lock while the PIN is disable.</string>
    <string name="registration_lock_hint">Require your ${app_name} PIN to be register your phone number with ${app_name} again</string>
    <string name="disable_pin">Disable PIN</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="transfer_account">Transfer Account</string>
    <string name="transfer_account_hint">Transfer your account to a new Android device</string>
    <string name="delete_account">Delete account</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Apperareance Preferences -->
    <string name="theme">Theme</string>
    <string name="theme_preference">Theme Preferance</string>
    <string-array name="theme">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="chat_color_amp_wallpaper"><![CDATA[Chat color & wallpaper]]></string>
    <string name="color_and_wallpaper_preferance">Color And Wallpaper Preferance</string>
    <string name="font_size">Message font size</string>
    <string name="font_size_preferance">Font Size Preferance</string>
    <string-array name="fontSize">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>ExtraLarge</item>
    </string-array>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="video">Video</string>

</resources>
