<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchButton"
        android:icon="@drawable/search_48px"
        android:title="@string/search"
        android:tooltipText="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/invite"
        android:title="@string/invite_friends"
        android:tooltipText="@string/invite_friends"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:tooltipText="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/notification"
        android:title="@string/notification_profile"
        android:tooltipText="@string/notification_profile"
        app:showAsAction="never" />

</menu>