<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="space_between"
        app:alignItems="center"
        app:flexWrap="wrap">

        <Button
            android:id="@+id/camera"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/camera"
            app:icon="@drawable/photo_camera_48px" />

        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gallery"
            android:layout_margin="4dp"
            app:icon="@drawable/photo_library_48px" />
        <Button
            style="@style/Widget.Material3.Button"
            android:layout_margin="4dp"
            android:id="@+id/audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/audio"
            app:icon="@drawable/mic_48px" />

        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/video"
            app:icon="@drawable/movie_24px" />
 <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/contact"
            app:icon="@drawable/contacts_48px" />


        <Button
            style="@style/Widget.Material3.Button"
            android:layout_margin="4dp"
            android:id="@+id/documents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/documents"
            app:icon="@drawable/description_48px" />

    </com.google.android.flexbox.FlexboxLayout>


</LinearLayout>
