<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chatTile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/account_circle_48px" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

    <TextView
        android:id="@+id/lastChatTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|end"
        android:text="@string/sample_text" />

</LinearLayout>